Added list of tags to each blog post card, rewrote the TagList component so that it appears over every /blog and /blog/[tag] route, with the current tag being search for highlighted. Also added list of additional posts to look at after a user finishes reading a blog post. Also added a Miscellaneous tag for blog posts that have no tags.

--- a/src/posts/calibrate-mdx.mdx
+++ b/src/posts/calibrate-mdx.mdx
@@ -4,7 +4,7 @@ description: >-
   In this blog post, I will utilize every HTML tag that can be
   used in Markdown in order to ensure that every element in 
   each post is styled correctly and looks nice on all browsers
-  and all screens. I also want to test how MDX works in NextJS
+  and all screens. I also want to test how MDX works in NextJS.
 
 tags: []
 date: 2023-07-19
@@ -86,7 +86,7 @@ I think *italic* text is okay.
 </figure>
 
 ## Image Frame with custom \<Frame> Component
-<Frame src="/assets/images/me.jpg" caption="MDX Works Here!" css={{width: '75%', margin: 'auto'}}/>
+<Frame src="/assets/images/me.jpg" caption="MDX Works Here!" css={{width: '85%', 'max-width': '600px', margin: 'auto'}}/>
 
 ## Links \<a>
 [Click Link Here](/assets/images/me.jpg)
