--- a/src/posts/calibrate-mdx.mdx
+++ b/src/posts/calibrate-mdx.mdx
@@ -8,6 +8,7 @@ description: >-
 
 tags: []
 date: 2023-07-19
+draft: true
 thumbnailSrc: /assets/images/blog/default-thumbnail.jpg
 thumbnailCaption: Penny Lane
 ---
