Added a default background and text to blog post cards with no thumbnails or cards whose thumbnail's won't load. Also added a note telling the user that there are no more posts on the bottom of each blog post if there are no other posts that can be recommended. Also added some more images to the the first blog post to make it more appealing.

--- a/src/posts/calibrate-mdx.mdx
+++ b/src/posts/calibrate-mdx.mdx
@@ -9,8 +9,8 @@ description: >-
 tags: []
 date: 2023-07-19T00:00:00-05:00
 draft: true
-thumbnailSrc: /assets/images/blog/default-thumbnail.jpg
-thumbnailCaption: Penny Lane
+thumbnailSrc: /assets/images/me.jpg
+thumbnailCaption: It's Me!
 ---
 
 ## Heading 2 \<h2>
@@ -87,7 +87,7 @@ I think *italic* text is okay.
 </figure>
 
 ## Image Frame with custom \<Frame> Component
-<Frame src="/assets/images/me.jpg" caption="MDX Works Here!" css={{width: '85%', 'max-width': '600px', margin: 'auto'}}/>
+<Frame src="/assets/images/me.jpg" caption="MDX Works Here!" css={{width: '85%', maxWidth: '600px', margin: 'auto'}}/>
 
 ## Links \<a>
 [Click Link Here](/assets/images/me.jpg)
