--- a/src/posts/calibrate.mdx
+++ b/src/posts/calibrate.mdx
@@ -9,8 +9,8 @@ description: >-
 tags: []
 date: 2023-07-19T00:00:00-05:00
 draft: true
-thumbnailSrc: /assets/images/blog/default-thumbnail.jpg
-thumbnailCaption: Penny Lane
+thumbnailSrc: /assets/images/me.jpg
+thumbnailCaption: It's Me!
 ---
 
 ## Heading 2 \<h2>
