--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: My First Post!
+title: Hello World!
 description: >- 
   In this blog post, I will introduce who I am, what the purpose of this website is, and what 
   topics I will discuss in these blog posts.
@@ -47,6 +47,11 @@ mobility to demonstrate how to use the scroll saw, so my dad ended up helping me
 he would still help me learn by giving me some of his old tools and woodworking magazines that had a 
 variety of projects that I can work on. As a result, woodworking became a hobby.
 
+<Frame src="/assets/images/blog/first-scroll-saw.jpg" caption="The scroll-saw my great-grandpa gave me!" useModal={true} css={{width: '100%', maxWidth: '700px', margin: '5em auto'}}/>
+
+<Frame src="/assets/images/blog/first-woodworking-project-alone.jpg" caption="My first piece of scrollwork!" useModal={true} css={{width: '100%', maxWidth: '700px', margin: '5em auto'}}/>
+
+
 ## How I Started Programming
 &ensp; I started programming in my senior year of high school when I took an AP Java Programming class
 as an elective. Despite being an AP class, I was told I would do well in that class because I had good grades in my Math class and had already taken AP classes before. When I first got to that class, however, I felt like a fish out of water. I had no idea what was going on in that class for the first month, mostly because
@@ -62,6 +67,7 @@ to stdout. Over the next few months, I was able to catch up with my peers and ev
 in Java called 'I Am The Airforce!' (<a href="https://github.com/oconnor-ryan/I-Am-The-Airforce-Java-Game" target="_blank">source code here</a>). Because it's my first big programming project, the quality of the 
 code is not good, but it's nice to look back and see how far I've come. 
 
+<Frame src="/assets/images/blog/i-am-the-airforce-1.jpg" caption="A screenshot of my first game!" useModal={true} css={{width: '100%', maxWidth: '700px', margin: 'auto'}}/>
 
 ## Fun Stuff About Me
 Here are some fun facts about me!
