--- a/src/posts/safe-sql-queries-nodejs.mdx
+++ b/src/posts/safe-sql-queries-nodejs.mdx
@@ -10,10 +10,8 @@ tags:
 
 date: 2023-07-19T00:00:00-05:00
 draft: true
-thumbnailSrc: /assets/images/blog/default-thumbnail.jpg
-thumbnailCaption: Penny Lane
 ---
-
+> TLDR: 
 ## Preventing SQL Injections In The mysql Package
 
 ## Preventing SQL Injections In The mysql2 Package
