Added RSS feed <link> tags so that RSS feed readers can automatically detect that I have a RSS feed. Also added thumbnail to rss feed blog post and added announcement tag.

--- a/src/posts/hello-world.mdx
+++ b/src/posts/hello-world.mdx
@@ -4,7 +4,8 @@ description: >-
   In this blog post, I will introduce who I am, what the purpose of this website is, and what 
   topics I will discuss in these blog posts.
 
-tags: []
+tags: 
+  - Announcement
 date: 2023-07-26T00:00:00-05:00
 draft: false
 thumbnailSrc: /assets/images/me.jpg
