Added more content to the RSS feed article, removed the customized marker for nested ordered lists in blog posts.

--- a/src/posts/rss-feeds-now-available.mdx
+++ b/src/posts/rss-feeds-now-available.mdx
@@ -172,11 +172,11 @@ conditions below and, if the condition is true, perform an action.
 3. In the match section, select the 'All Conditions' option from the dropdown.
 This means that all conditions must be true before the action specified later
 in the rule is performed.
-4. Press 'Add Condition' to add more conditions.
-5. In the first condition, use the dropdown to form the sentence: "Content doesn't contain text blog using case-insensive matching"
-This means that if the description of a post does not contain the string
-"blog", whether capitalized or not, then apply the actions specified.
-6. Finally, you will need to add an action that occurs when one of those
+    * Press 'Add Condition' to add more conditions.
+    * In the first condition, use the dropdown to form the sentence: "Content doesn't contain text blog using case-insensive matching"
+        This means that if the description of a post does not contain the string
+        "blog", whether capitalized or not, then apply the actions specified.
+4. Finally, you will need to add an action that occurs when one of those
 conditions is true. Click 'Add Action' and select 'Delete Article'.
 
 Here is a screenshot of the entire rule for adding the 'HTML' tag to
