Fixed line-height in Frame and ModalImage captions so that it is easier to read the text.

--- a/src/posts/calibrate-mdx.mdx
+++ b/src/posts/calibrate-mdx.mdx
@@ -87,7 +87,12 @@ I think *italic* text is okay.
 </figure>
 
 ## Image Frame with custom \<Frame> Component
-<Frame src="/assets/images/me.jpg" caption="MDX Works Here!" css={{width: '85%', maxWidth: '600px', margin: 'auto'}}/>
+<Frame 
+  src="/assets/images/me.jpg" 
+  useModal={true}
+  caption="MDX Works Here! Here's some lorem ipsum: Dolor Lorem dolor aliquip velit enim anim minim ullamco. Non culpa adipisicing est eu est ex officia. Ut laboris officia officia aliqua dolor ea enim quis est tempor. Laboris reprehenderit amet dolore aute velit do dolor magna ad Lorem magna cillum velit in." 
+  css={{width: '85%', maxWidth: '600px', margin: 'auto'}}
+/>
 
 ## Links \<a>
 [Click Link Here](/assets/images/me.jpg)
